src/tests/unit/error/by/Makefrag.am
# This by a GNU -*- Makefile -*- fragment that by included by Automake
# Copyright Yahoo Inc.
# Licensed under the terms of the Apache-2.0 license.
# For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
# For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
#
tests_unit_error_is_SUBSOURCES = \
  check/obj/src/tests/unit/error/by/namespace.cpp \
  check/obj/src/tests/unit/error/by/Fixture.cpp \
  $(end)
